Added form for create a new user. Added user fields validator. Search form refactoring

--- a/templates/users/index.phtml
+++ b/templates/users/index.phtml
@@ -5,6 +5,6 @@
 
 <ul>
 <?php foreach ($users as $user) : ?>
-    <li><?= $user; ?></li>
+    <li><a href="/users/<?= $user['id']; ?>"><?= $user['nickname']; ?></a></li>
 <?php endforeach; ?>
 </ul>
