--- a/templates/users/new.phtml
+++ b/templates/users/new.phtml
@@ -1,6 +1,6 @@
 <h1>New user</h1>
 
-<form action="/users" method="POST">
+<form action="<?= $routeFormCreateUser; ?>" method="POST">
     <div>
         <label>
             Nickname:
