--- a/templates/users/show.phtml
+++ b/templates/users/show.phtml
@@ -1,3 +1,8 @@
-id = <?= $id; ?>
+id: <?= $user['id']; ?>
 <br>
-nickname = <?= $nickname; ?>
+nickname: <?= $user['nickname']; ?>
+<br>
+email: <?= $user['email']; ?>
+
+<br>
+<a href="<?= $routeUserIndex; ?>">Users list</a> 
