Show flash messages when creating a user

--- a/templates/users/show.phtml
+++ b/templates/users/show.phtml
@@ -5,4 +5,4 @@ nickname: <?= $user['nickname']; ?>
 email: <?= $user['email']; ?>
 
 <br>
-<a href="<?= $routeUserIndex; ?>">Users list</a> 
+<a href="<?= $routeUserIndex; ?>">A list of users</a> 
